Fix dark mode toggle's animation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,10 +20,10 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  @apply transition-colors duration-200;
+  @apply transition-colors duration-300;
   /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 body * {
-  @apply transition-colors duration-100;
+  @apply transition-colors duration-75;
 }
